# advent-of-code

./: .gitignore  Cargo.toml  justfile
.github/workflows/: ci.yml
data/puzzles/: 2021_01.md  2021_02.md  2023_02.md  2023_06.md  2023_07.md  2023_08.md
src/: lib.rs  main.rs  year.rs
src/template/: aoc_cli.rs  mod.rs  runner.rs
src/template/commands/: download.rs  read.rs  scaffold.rs  solve.rs
