[package]
name = "advent_of_code"
version = "0.9.2"
authors = [
    "Jakob Ankarhem <jakob@ankarhem.dev>",
    "Felix Spöttel <1682504+fspoettel@users.noreply.github.com>",
]
edition = "2021"
default-run = "advent_of_code"
publish = false
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
doctest = false

[features]
test_lib = []

[dependencies]
anyhow = "1.0.75"
cond = "1.0.5"
indicatif = { version = "0.17.7", features = ["rayon"] }
itertools = "0.12.0"
lazy_static = "1.4.0"
pico-args = "0.5.0"
pretty_assertions = "1.4.0"
rayon = "1.8.0"
regex = "1.10.2"
rstest = "0.18.2"
